--- a/android_search/res/layout/hotel_list_portrait.xml
+++ b/android_search/res/layout/hotel_list_portrait.xml
@@ -3,15 +3,14 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_weight="0.2"
-    android:background="#ffffffff"
     android:orientation="vertical" >
 
     <ListView
         android:id="@+id/hotelListView"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
+        android:drawSelectorOnTop="true"
         android:layout_weight="0.8"
         android:cacheColorHint="#00000000" >
     </ListView>
-
 </LinearLayout>
