--- a/android_search/res/layout/hotel_map.xml
+++ b/android_search/res/layout/hotel_map.xml
@@ -2,29 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" 
-    android:id="@+id/map_container" >
-
-<!--   <fragment 
-          android:id="@+id/map"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:name="com.google.android.gms.maps.SupportMapFragment"/> -->
-  
-<!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-
-   -->
-    <!-- 
-<com.google.android.maps.MapView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/mapview"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:clickable="true"
-    android:apiKey="0Q5WyeldvY7jrbxow5od7iY6XC-qveSWrFVLAVg"
-/> -->
-<!-- computer android:apiKey="0Q5WyeldvY7hGbyQQFIZmdVmMjtOdi0zIMyWzBw" -->
-<!-- </RelativeLayout> -->
+	    android:id="@+id/map_container" 
+    >
 </RelativeLayout>
