--- a/android_search/res/layout/row_vha_dialog.xml
+++ b/android_search/res/layout/row_vha_dialog.xml
@@ -1,23 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"    
-    android:background="@color/white"
-     >
-
- <LinearLayout 
-	    android:layout_width="wrap_content"
+ <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="15dip"
+    android:background="@color/white"
+android:orientation="horizontal"        
         >
         
     <TextView
         android:id="@+id/response_index"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="4dip"
+        android:layout_marginLeft="15dip"
+        android:layout_marginRight="5dip"
+        android:layout_marginTop="2dip"
         android:text="3"
         android:textColor="@color/vha_chat_in_session_text"
         android:textSize="20sp"
@@ -30,6 +26,5 @@
         android:textSize="16sp"
         android:paddingLeft="5dp"
         android:textColor="@color/vha_chat_no_session_text"
-        android:text="Bla bla lorem ipsum" />
-	</LinearLayout>
-</RelativeLayout>
+        android:text="Bla bla lorem ipsum sdfg as asdf" />
+</LinearLayout>
