--- a/android_search/res/drawable-hdpi/hotel_background.xml
+++ b/android_search/res/drawable-hdpi/hotel_background.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">    
-       <gradient
-        android:endColor="#ffe3e3e3"        
-        android:startColor="#ffffffff"
-        android:angle="270"/>    
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android"
+ android:exitFadeDuration="@android:integer/config_shortAnimTime">
+
+	<item android:state_activated="true">
+	    <shape android:shape="rectangle">
+	        <gradient android:angle="270" android:endColor="#ffc3c3ff" android:startColor="#ffefefff" />
+	    </shape>
+	</item>
+	<item>
+		<shape android:shape="rectangle">
+	        <gradient android:angle="270" android:endColor="#ffe3e3e3" android:startColor="#ffffffff" />
+	    </shape>
+	</item>
+</selector>
+
+ 
