--- a/android_search/res/values/attrs.xml
+++ b/android_search/res/values/attrs.xml
@@ -9,5 +9,9 @@
         <attr name="bottomBarHeight" format="dimension" />
         <attr name="tabIndicatorHeight" format="dimension" />
     </declare-styleable>
+    <declare-styleable name="ButtonBarContainerTheme">
+        <attr name="buttonBarStyle" format="reference" />
+        <attr name="buttonBarButtonStyle" format="reference" />
+    </declare-styleable>
 
 </resources>
