--- a/android_search/res/layout/new_main.xml
+++ b/android_search/res/layout/new_main.xml
@@ -2,24 +2,38 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/the_main_layout"
-    xmlns:swipeytabs="http://schemas.android.com/apk/res/com.virtual_hotel_agent.search"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
-    <com.virtual_hotel_agent.search.views.SwipeyTabs
-        android:id="@+id/swipeytabs"
-        android:layout_width="fill_parent"
+   
+<!--     <com.viewpagerindicator.TabPageIndicator -->
+<!--         android:id="@+id/indicator" -->
+<!--         android:layout_height="wrap_content" -->
+<!--         android:layout_width="fill_parent" -->
+<!--         /> -->
+    
+    <com.viewpagerindicator.TitlePageIndicator
+        android:id="@+id/indicator"
+        android:padding="10dip"
         android:layout_height="wrap_content"
-        swipeytabs:bottomBarColor="#ff88aaee"
-        swipeytabs:bottomBarHeight="2dip"
-        swipeytabs:tabIndicatorHeight="3dip"
-        android:background="#ff3b3b3b"/>
+        android:layout_width="fill_parent"
+        android:background="#ff3b3b3b"
+        android:textColor="#AA88aaee"
+        app:footerColor="#ff88aaee"
+        app:footerLineHeight="2dp"
+        app:footerIndicatorHeight="3dp"
+        app:footerIndicatorStyle="underline"
+        app:selectedColor="#FF88aaee"
+        app:selectedBold="true"
+        />
+    
 
-    <com.virtual_hotel_agent.components.MyViewPager
+    <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="fill_parent"
-        android:layout_below="@id/swipeytabs"
+        android:layout_below="@id/indicator"
         android:layout_alignParentBottom="true"
         android:layout_height="fill_parent" />
 <!--         android:layout_above="@+id/bottom_bar" -->
