--- a/android_search/res/layout/room_list_item.xml
+++ b/android_search/res/layout/room_list_item.xml
@@ -11,10 +11,23 @@
         android:id="@+id/relativeLayout1"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" 
+         
 
         >
-
+        <ImageView 
+            android:id="@+id/roomImage"
+            android:layout_width="72dp"
+            android:layout_height="72dp"
+            android:visibility="visible"
+            android:src="@drawable/hotel72"
+            />
+        
+        <LinearLayout 
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/roomImage"
+            android:orientation="vertical"
+            >
         <TextView
             android:id="@+id/promo"
             android:layout_width="wrap_content"
@@ -49,7 +62,7 @@
                 android:id="@+id/per_night_full"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="/night   ⇢  "
+                android:text="/night ⇢ "
                 android:textColor="#ff000000"
                 android:textSize="14dip" />
 
@@ -79,7 +92,7 @@
             android:layout_below="@+id/linearLayout1"
             android:text="Details" 
             android:textColor="#222222"/>
-
+		</LinearLayout>
         
     </RelativeLayout>
 
