--- a/android_search/res/layout/hotel_list_portrait.xml
+++ b/android_search/res/layout/hotel_list_portrait.xml
@@ -11,6 +11,7 @@
         android:layout_height="0dp"
         android:drawSelectorOnTop="true"
         android:layout_weight="0.8"
+        android:choiceMode="singleChoice"
         android:cacheColorHint="#00000000" >
     </ListView>
 </LinearLayout>
