--- a/android_search/res/layout/select_hotel_room.xml
+++ b/android_search/res/layout/select_hotel_room.xml
@@ -90,6 +90,7 @@
         android:cacheColorHint="#00000000"
         android:choiceMode="singleChoice"
         android:divider="@drawable/divider"
+        android:childDivider="#00000000"
         android:groupIndicator="@android:color/transparent" >
 
     </ExpandableListView>
