Published version 48, minor fixes and refactoring

--- a/android_search/res/layout/fragment_select_hotel_room.xml
+++ b/android_search/res/layout/fragment_select_hotel_room.xml
@@ -91,6 +91,10 @@
         android:choiceMode="singleChoice"
         android:divider="@drawable/divider"
         android:childDivider="#00000000"
+        android:childIndicatorStart="0dp"
+        android:childIndicatorEnd="0dp"
+        android:clipToPadding="false"
+        android:scrollbarStyle="outsideOverlay"
         android:groupIndicator="@android:color/transparent" >
 
     </ExpandableListView>
