--- a/android_search/res/layout/fragment_chat.xml
+++ b/android_search/res/layout/fragment_chat.xml
@@ -15,6 +15,8 @@
         android:layout_centerHorizontal="true"
         android:divider="@null"
         android:dividerHeight="0dp"
+        android:clipToPadding="false"
+        android:scrollbarStyle="outsideOverlay"
         android:drawSelectorOnTop="true"
         android:stackFromBottom="false"
         android:background="@drawable/chat_background"
