--- a/android_search/res/layout/room_list_item_expanded.xml
+++ b/android_search/res/layout/room_list_item_expanded.xml
@@ -7,19 +7,51 @@
   android:orientation="vertical"
   android:background="@color/selected_room_list_item"
   android:descendantFocusability="blocksDescendants">
+ 
+    	<LinearLayout 
+		  android:layout_width="fill_parent"
+		  android:layout_height="wrap_content"
+		  android:orientation="horizontal"> 
+		  
+    	    <LinearLayout
+    	        android:layout_width="fill_parent"
+		  		android:layout_height="wrap_content" 
+	            android:layout_weight="0.5"
+    	        >
+    	    <ImageView 
+	            android:id="@+id/roomImage"
+				android:layout_width="128dp"
+            	android:layout_height="wrap_content"
+            	android:gravity="center"
+	            android:visibility="visible"
+		         
+		         android:layout_gravity="center"
+	            android:background="@android:drawable/picture_frame"
+	            android:src="@drawable/hotel72"
+	            android:contentDescription="@string/room_photo"/>
+    	    </LinearLayout>
+    
+    	    <LinearLayout
+    	        android:layout_width="fill_parent"
+		  		android:layout_height="wrap_content" 
+	            android:layout_weight="0.5"
+	            android:gravity="center"
+    	        >
+		    <Button
+		         android:id="@+id/buttonChooseRoom"
+		         android:layout_width="wrap_content"
+		         android:layout_height="wrap_content"
+		         android:layout_gravity="center"
+		         android:layout_marginTop="4dp"
+		         android:textColor="@color/white"
+		         android:background="@drawable/custom_button_active"
+		         android:padding="15dp"
+		         android:textSize="16sp"
+		         android:text="@string/checkout" />
+	    </LinearLayout>
+    	</LinearLayout>
 
-    <Button
-         android:id="@+id/buttonChooseRoom"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_marginTop="4dip"
-         android:layout_gravity="center_horizontal"
-         android:textColor="@color/white"
-         android:background="@drawable/custom_button_active"
-         android:padding="15dp"
-         android:textSize="16sp"
-         android:text="@string/checkout" />
-     
+	    
      <!-- <TextView
          android:id="@+id/roomDescription"
          android:layout_width="match_parent"
