--- a/android_search/res/layout/room_list_item_expanded.xml
+++ b/android_search/res/layout/room_list_item_expanded.xml
@@ -13,11 +13,32 @@
 		  android:layout_height="wrap_content"
 		  android:orientation="horizontal"> 
 		  
+    	   
     	    <LinearLayout
     	        android:layout_width="fill_parent"
-		  		android:layout_height="wrap_content" 
+		  		android:layout_height="fill_parent" 
 	            android:layout_weight="0.5"
+	            android:gravity="center"
     	        >
+
+		    <Button
+		        android:id="@+id/buttonChooseRoom"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_gravity="center"
+		        android:background="@drawable/custom_button_active"
+		        android:padding="15dp"
+		        android:text="@string/checkout"
+		        android:textColor="@color/white"
+		        android:textSize="16sp" />
+
+	    </LinearLayout>
+	    <LinearLayout
+    	        android:layout_width="fill_parent"
+    	        android:layout_height="wrap_content"
+    	        android:gravity="center_horizontal"
+    	        android:layout_weight="0.5" >
+
     	    <ImageView 
 	            android:id="@+id/roomImage"
 				android:layout_width="128dp"
@@ -31,24 +52,6 @@
 	            android:contentDescription="@string/room_photo"/>
     	    </LinearLayout>
     
-    	    <LinearLayout
-    	        android:layout_width="fill_parent"
-		  		android:layout_height="wrap_content" 
-	            android:layout_weight="0.5"
-	            android:gravity="center"
-    	        >
-		    <Button
-		         android:id="@+id/buttonChooseRoom"
-		         android:layout_width="wrap_content"
-		         android:layout_height="wrap_content"
-		         android:layout_gravity="center"
-		         android:layout_marginTop="4dp"
-		         android:textColor="@color/white"
-		         android:background="@drawable/custom_button_active"
-		         android:padding="15dp"
-		         android:textSize="16sp"
-		         android:text="@string/checkout" />
-	    </LinearLayout>
     	</LinearLayout>
 
 	    
