--- a/android_search/res/layout/hotel_details_landscape.xml
+++ b/android_search/res/layout/hotel_details_landscape.xml
@@ -94,17 +94,17 @@
             android:layout_height="wrap_content"            
             android:orientation="vertical" >
 
-            <GridView
-                android:id="@+id/amenitiesGridview"
-                android:layout_width="fill_parent"
-                android:layout_height="64dip"
-                android:columnWidth="64dp"
-                android:gravity="center"
-                android:horizontalSpacing="20dp"
-                android:numColumns="4"
-                android:stretchMode="columnWidth"
-                android:verticalSpacing="20dp" >
-            </GridView>
+<!--             <GridView -->
+<!--                 android:id="@+id/amenitiesGridview" -->
+<!--                 android:layout_width="fill_parent" -->
+<!--                 android:layout_height="64dip" -->
+<!--                 android:columnWidth="64dp" -->
+<!--                 android:gravity="center" -->
+<!--                 android:horizontalSpacing="20dp" -->
+<!--                 android:numColumns="4" -->
+<!--                 android:stretchMode="columnWidth" -->
+<!--                 android:verticalSpacing="20dp" > -->
+<!--             </GridView> -->
 
             <WebView
                 android:id="@+id/propertyDescription"
