--- a/android_search/res/layout/room_list_item_expanded.xml
+++ b/android_search/res/layout/room_list_item_expanded.xml
@@ -13,19 +13,20 @@
 		  android:layout_height="wrap_content"
 		  android:orientation="horizontal"> 
 		  
-    	   
     	    <LinearLayout
     	        android:layout_width="fill_parent"
-		  		android:layout_height="fill_parent" 
-	            android:layout_weight="0.5"
-	            android:gravity="center"
-    	        >
+    	        android:layout_height="wrap_content"
+    	        android:layout_gravity="center"
+    	        android:layout_weight="0.5"
+    	        android:gravity="center" >
 
 		    <Button
 		        android:id="@+id/buttonChooseRoom"
 		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:layout_gravity="center"
+		        android:layout_height="match_parent"
+		        android:layout_gravity="center_vertical"
+		        android:layout_marginBottom="3dp"
+		        android:layout_marginTop="3dp"
 		        android:background="@drawable/custom_button_active"
 		        android:padding="15dp"
 		        android:text="@string/checkout"
@@ -34,6 +35,7 @@
 
 	    </LinearLayout>
 	    <LinearLayout
+	         	android:id='@+id/roomImage_container'
     	        android:layout_width="fill_parent"
     	        android:layout_height="wrap_content"
     	        android:gravity="center_horizontal"
@@ -44,9 +46,8 @@
 				android:layout_width="128dp"
             	android:layout_height="wrap_content"
             	android:gravity="center"
-	            android:visibility="visible"
-		         
-		         android:layout_gravity="center"
+	            
+  	            android:layout_gravity="center"
 	            android:background="@android:drawable/picture_frame"
 	            android:src="@drawable/hotel72"
 	            android:contentDescription="@string/room_photo"/>
