--- a/android_search/res/values/colors.xml
+++ b/android_search/res/values/colors.xml
@@ -156,6 +156,7 @@
     <color name="white">#fff</color>
     <color name="half_black">#88000000</color>
     <color name="black_overlay">#66000000</color>
+    <color name="text">#ff333333</color>
     <color name="selected_room_list_item">#ffc3c3ff</color>
     <color name="selected_non_refundable_room_list_item">#ffe08050</color>
 </resources>
