--- a/android_search/res/layout/fragment_hotel_details_portrait.xml
+++ b/android_search/res/layout/fragment_hotel_details_portrait.xml
@@ -57,7 +57,7 @@
 	            android:layout_marginRight="10dp"
 	            android:background="@drawable/custom_button_active"
 	            android:gravity="center"
-	            android:text="Select"
+	            android:text="@string/select"
 	            android:paddingLeft="17dip"
 	            android:paddingRight="17dip"
 	            android:textColor="#FFFFFFFF"
